# dialect-labeler

./: .gitignore  README.md  index.html  package-lock.json  package.json  自由演绎.jsonl
.github/workflows/: build-windows.yml
src/: App.css  App.tsx  defaults.ts  env.ts  hooks.ts  lib.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: default_llm_prompt.txt  lib.rs  main.rs
src/components/: AlignedTimeline.tsx  AnnotationView.tsx  ConfigBand.tsx  EmptyState.tsx  MainView.tsx  ProgressPanel.tsx  SettingsDrawer.tsx  SetupBand.tsx  ShortcutOverlay.tsx  ToastStack.tsx  Topbar.tsx  Waveform.tsx
src/styles/: theme.css
