[package]
name = "dialect-labeler"
version = "0.1.0"
description = "Dialect audio segmentation and annotation workbench"
authors = ["lan_chs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dialect_labeler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
# `preserve_order` makes serde_json::Map preserve insertion order so the
# `json!` macro emits keys in the order they're written. Required for
# matching the dataset spec's exact `role / content / audio_file / emotion`
# layout in exported JSONL.
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
base64 = "0.22"
rodio = "0.20"
ureq = { version = "2", features = ["json"] }
rayon = "1"
